2004/03/20 20:32 (-0500) muppetman

	* xs/GdkEvent.xs, xs/GtkAccelGroup.xs, xs/GtkAccelMap.xs,
	xs/GtkItemFactory.xs, xs/GtkMenu.xs, xs/GtkTreeView.xs: remove
	private symbols from ABI

2004/03/19 03:56 (-0500) muppetman

	* Gtk2.pm, Makefile.PL, NEWS: 1.040 release candidate 1 (1.0391)

2004/03/18 22:06 (+0100) kaffeetisch

	* t/GdkEvent.t
	* xs/GdkEvent.xs: Prevent the return value of window() and
	subwindow() from being destroyed and check for NULL before
	unref()ing.  Allow undef to be passed to
	Gtk2::Gdk::Event::Setting::name and
	Gtk2::Gdk::Event::DND::context.

2004/03/17 13:12 (-0500) rwmcfa1

	* examples/dialog.pl: initial import, example of the two main ways to
	use a Gtk2::Dialog. 

	* xs/GtkDialog.xs: added an enum (GtkDialogFlags) to the apidoc

2004/03/17 17:13 (+0100) kaffeetisch

	* t/GdkProperty.t
	* xs/GdkProperty.xs: Use sv_len instead of strlen in
	Gtk2::Gdk::Property::change because \0's are allowed.  Test it.

2004/03/16 22:08 (-0500) rwmcfa1

	* examples/item_factory.pl: so the usage of accel_groups (based on
	simple_menu code) and comment things a bit.

2004/03/16 21:56 (-0500) muppetman

	D maps-2.3
	A maps-2.4
	D xs_files-2.3
	A xs_files-2.4
	M MANIFEST
	  rename the files related to 2.3

2004/03/16 21:51 (-0500) muppetman

	* gtk-demo/changedisplay.pl: remove cruft

	* t/GdkEvent.t, t/GdkGC.t: unify the phrasing of some skip messages

	* t/GtkFileChooser.t: enable tests for get_preview_filename and
	get_preview_uri, but leave them as TODO, because i can't figure out
	why they work in examples/file_chooser.pl and not here.  bump the
	master version check to 2.4.0, and remove the others.

	* gtk2perl.h, maps-2.0, examples/combo_box.pl,
	examples/file_chooser.pl, gtk-demo/main.pl, t/01.GtkWindow.t,
	t/GdkCursor.t, t/GdkDisplay.t, t/GdkDrawable.t, t/GdkPixbuf.t,
	t/GtkAccelGroup.t, t/GtkAction.t, t/GtkActionGroup.t, t/GtkAlignment.t,
	t/GtkButton.t, t/GtkButtonBox.t, t/GtkCellLayout.t,